c4prj1_deck/grade.txt
Grading at Sun Mar  7 16:02:15 UTC 2021
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:221:3: error: invalid type argument of unary ‘*’ (have ‘unsigned int’)
   * arr[i] = count;
   ^
Compilation of eval.c failed

Overall Grade: F
